[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Pendulum.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scripts/Trail.gd" type="Script" id=3]
[ext_resource path="res://sprites/circle.png" type="Texture" id=4]

[sub_resource type="Curve" id=1]
max_value = 3.0
_data = [ Vector2( 0.00743494, 0.0363636 ), 0.0, 0.0, 0, 0, Vector2( 1, 3 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.0714286, 0.668067, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.630223, 0, 1, 1, 0.937255, 0, 1 )

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.760784, 0.811765, 0.0235294, 1 )

[node name="Pendulum" type="Node2D"]
script = ExtResource( 1 )

[node name="trail" type="Line2D" parent="."]
width = 5.0
width_curve = SubResource( 1 )
default_color = Color( 1, 0, 0, 1 )
gradient = SubResource( 2 )
script = ExtResource( 3 )

[node name="pivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="pivot"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="mass1" type="Position2D" parent="pivot"]

[node name="Sprite" type="Sprite" parent="pivot/mass1"]
modulate = Color( 0.0117647, 0.00784314, 0.780392, 1 )
texture = ExtResource( 4 )

[node name="mass2" type="Position2D" parent="pivot"]

[node name="Sprite" type="Sprite" parent="pivot/mass2"]
modulate = Color( 1, 0.933333, 0, 1 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="pivot/mass2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/mass2/Area2D"]
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="pivot/mass2"]
amount = 512
lifetime = 5.0
process_material = SubResource( 4 )

[connection signal="body_entered" from="pivot/mass2/Area2D" to="." method="_on_Area2D_body_entered"]
